syntax = "proto3";
package alerteMsg;

message AlerteMsg {
    string id = 1;
    string message = 2;
    string recipient = 3;
   
}

message SendAlerteMsgRequest {
    string message = 1;
    string recipient = 2;
    
    
}

message SendAlerteMsgResponse {
    string confirmation = 1;
}

message UpdateAlerteMsgRequest {
    string id = 1;
    string message = 2;
    string recipient = 3;
}

message UpdateAlerteMsgResponse {
    string confirmation = 1;
}

service AlerteMsgService {
    rpc SendAlerteMsg(SendAlerteMsgRequest) returns (SendAlerteMsgResponse);
    rpc UpdateAlerteMsg(UpdateAlerteMsgRequest) returns (UpdateAlerteMsgResponse);
}
